Refactor: streamline CSSMin for better maintainability and performance